syntax = "proto3";

package api.AuthService;
option go_package = "github.com/mussyaroslav/auth-service/generate/api.authservice";

import "google/rpc/status.proto";

service AuthService {
  rpc Ping (PingRequest) returns (PingResponse) {}
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
}

message PingRequest {}

message PingResponse {
  bool ok = 1;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  string jwt_token = 1;
  optional google.rpc.Status error = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string jwt_token = 2;
}